--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react-navigation": "^3.0.8",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.0",
+    "nodemon": "^3.1.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-safe-area-context": "^4.11.0",
