--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@types/react-navigation": "^3.0.8",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-deck-swiper": "^2.0.17",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
@@ -37,16 +36,12 @@
     "@react-native/babel-preset": "0.75.4",
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
-    "@react-native/typescript-config": "0.75.4",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "react-test-renderer": "18.3.1"
   },
   "engines": {
     "node": ">=18"
